--- a/docs/content/docs/zh/changelog.mdx
+++ b/docs/content/docs/zh/changelog.mdx
@@ -33,7 +33,7 @@ TalkCody 的所有重要更新都记录在这里。
 ### 新增
 
 - **Usage 使用量页面**：新增使用量统计页面，可查看 Claude 订阅、OpenAI 订阅、GitHub Copilot 订阅、智谱 Coding Plan 的使用情况
-- **免费使用方式扩展**：新增 OpenCode Zen 免费提供商，可以免费使用 GLM-4.7 模型，目前共支持 9 种完全免费的使用方式，详情参考 [TalkCody 免费使用指南](/zh/docs/guides/free-use)
+- **免费使用方式扩展**：目前共支持 8 种完全免费的使用方式，详情参考 [TalkCody 免费使用指南](/zh/docs/guides/free-use)
 - **GitHub Skill 导入**：支持一键导入Github 仓库的 Agent Skills
 - **macOS Dock 菜单支持**：支持快速打开最近的项目和新建窗口，提升 macOS 用户的使用体验
 - **Vue 语法高亮支持**：新增 Vue 语法高亮和 LSP 支持，提供更好的 Vue 项目开发体验
