--- a/docs/content/docs/en/changelog.mdx
+++ b/docs/content/docs/en/changelog.mdx
@@ -33,7 +33,7 @@ All notable changes to TalkCody are documented here.
 ### Added
 
 - **Usage Page**: New usage statistics page to view usage for Claude subscription, OpenAI subscription, GitHub Copilot subscription, and Zhipu Coding Plan.
-- **Free Usage Expansion**: Added OpenCode Zen free provider for free GLM-4.7 model usage, now supporting 9 completely free usage methods. For details, refer to [TalkCody Free Usage Guide](/docs/guides/free-use).
+- **Free Usage Expansion**: now supporting 8 completely free usage methods. For details, refer to [TalkCody Free Usage Guide](/docs/guides/free-use).
 - **GitHub Skill Import**: Support for one-click import of Agent Skills from GitHub repositories.
 - **macOS Dock Menu Support**: Support for quickly opening recent projects and creating new windows, enhancing the macOS user experience.
 - **Vue Syntax Highlighting Support**: New Vue syntax highlighting and LSP support for a better Vue project development experience.
